All Games page and PS2 page

--- a/RetroAchievementTracker/RetroAchievementTracker.csproj
+++ b/RetroAchievementTracker/RetroAchievementTracker.csproj
@@ -40,4 +40,10 @@
     </None>
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Pages\AllGames.razor">
+      <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+    </Content>
+  </ItemGroup>
+
 </Project>
