--- a/retrotrack.web/.env.development
+++ b/retrotrack.web/.env.development
@@ -1,3 +1,4 @@
-API_URL=https://localhost:7187
+API_URL=https://localhost:7252
 NEXT_PUBLIC_WEB_URL=http://localhost:3000
 NEXTAUTH_URL=http://localhost:3000
+NEXTAUTH_SECRET=supersecretpassword
