--- a/retrotrack.web/.env.production
+++ b/retrotrack.web/.env.production
@@ -1,3 +1,4 @@
 API_URL=https://rtapi.bregan.me
 NEXT_PUBLIC_WEB_URL=https://retrotrack.bregan.me
 NEXTAUTH_URL=https://retrotrack.bregan.me
+NEXTAUTH_SECRET=verysecretindeed
