--- a/RetroTrack/RetroTrack/RetroTrack.Api.csproj
+++ b/RetroTrack/RetroTrack/RetroTrack.Api.csproj
@@ -15,7 +15,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Controllers\" />
+    <ProjectReference Include="..\..\RetroTrack.Domain\RetroTrack.Domain.csproj" />
   </ItemGroup>
 
 </Project>
