--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -12,8 +12,10 @@
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
     "@mantine/core": "^5.7.2",
+    "@mantine/form": "^5.8.0",
     "@mantine/hooks": "^5.7.2",
     "@mantine/next": "^5.7.2",
+    "@tabler/icons": "^1.112.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
