--- a/RetroTrack.Domain/RetroTrack.Domain.csproj
+++ b/RetroTrack.Domain/RetroTrack.Domain.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
     <PackageReference Include="Serilog.Sinks.Console" Version="4.1.0" />
@@ -15,6 +16,11 @@
 
   <ItemGroup>
     <ProjectReference Include="..\RetroTrack.Infrastructure\RetroTrack.Infrastructure.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Dtos\LoggedIn\" />
+    <Folder Include="LoggedIn\" />
   </ItemGroup>
 
 </Project>
