--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -27,6 +27,7 @@
     "react": "18.2.0",
     "react-bootstrap": "^2.6.0",
     "react-dom": "18.2.0",
+    "react-toastify": "^9.1.1",
     "typescript": "4.8.4"
   }
 }
