--- a/RetroTrack.Domain/RetroTrack.Domain.csproj
+++ b/RetroTrack.Domain/RetroTrack.Domain.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="RestSharp" Version="108.0.3" />
     <PackageReference Include="Serilog" Version="2.12.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="1.5.0" />
@@ -20,9 +21,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Dtos\LoggedIn\" />
     <Folder Include="Data\LoggedIn\" />
-    <Folder Include="Enums\" />
   </ItemGroup>
 
 </Project>
