--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -21,14 +21,13 @@
     "@types/react-dom": "18.0.8",
     "bootstrap": "^5.2.2",
     "eslint": "8.27.0",
-    "eslint-config-next": "13.0.3",
+    "eslint-config-next": "^13.0.6",
     "lodash": "^4.17.21",
     "mantine-datatable": "^1.7.25",
-    "next": "13.0.3",
+    "next": "^13.0.6",
     "next-auth": "^4.16.4",
-    "react": "18.2.0",
-    "react-bootstrap": "^2.6.0",
-    "react-dom": "18.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
     "typescript": "4.8.4"
   },
