--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start -p 3001",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
@@ -26,6 +27,7 @@
     "mantine-datatable": "^1.7.25",
     "next": "^13.0.6",
     "next-auth": "^4.18.0",
+    "next-sitemap": "^3.1.32",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
