move connection string to appsettings

--- a/RetroTrack/RetroTrack/appsettings - Example.Development.json
+++ b/RetroTrack/RetroTrack/appsettings - Example.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "BloggingDatabase": "connection"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
