--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.18.0",
     "next-sitemap": "^3.1.32",
     "react": "^18.2.0",
+    "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
     "typescript": "4.8.4"
