--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -5,29 +5,29 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start -p 3001",
+    "start": "next start",
     "lint": "next lint",
     "postbuild": "next-sitemap"
   },
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/server": "^11.10.0",
-    "@mantine/core": "^5.7.2",
-    "@mantine/form": "^5.8.0",
+    "@mantine/core": "^5.10.3",
+    "@mantine/form": "^5.10.3",
     "@mantine/hooks": "^5.7.2",
-    "@mantine/next": "^5.7.2",
-    "@tabler/icons": "^1.112.0",
+    "@mantine/next": "^5.10.3",
+    "@tabler/icons": "^1.119.0",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
-    "bootstrap": "^5.2.2",
+    "bootstrap": "^5.2.3",
     "eslint": "8.27.0",
-    "eslint-config-next": "^13.0.6",
+    "eslint-config-next": "^13.1.6",
     "lodash": "^4.17.21",
-    "mantine-datatable": "^1.7.25",
-    "next": "^13.0.6",
-    "next-auth": "^4.18.0",
-    "next-sitemap": "^3.1.32",
+    "mantine-datatable": "^1.7.39",
+    "next": "^13.1.6",
+    "next-auth": "^4.19.2",
+    "next-sitemap": "^3.1.49",
     "react": "^18.2.0",
     "react-calendar-heatmap": "^1.9.0",
     "react-dom": "^18.2.0",
