--- a/RetroTrack/RetroTrack/RetroTrack.Api.csproj
+++ b/RetroTrack/RetroTrack/RetroTrack.Api.csproj
@@ -11,8 +11,9 @@
 
   <ItemGroup>
     <PackageReference Include="Hangfire" Version="1.7.33" />
+    <PackageReference Include="Hangfire.Dashboard.BasicAuthorization" Version="1.0.2" />
     <PackageReference Include="Hangfire.Dashboard.Dark" Version="2.0.4" />
-    <PackageReference Include="Hangfire.PostgreSql" Version="1.9.10" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.9.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="7.0.2">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
