--- a/retrotrack.web/.eslintrc.json
+++ b/retrotrack.web/.eslintrc.json
@@ -1,3 +1,24 @@
 {
-  "extends": "next/core-web-vitals"
+  "extends": [
+    "next/core-web-vitals",
+    "standard-with-typescript"
+  ],
+  "parserOptions": {
+    "ecmaVersion": "latest",
+    "sourceType": "module",
+    "emitWarning": true,
+    "project": [
+      "./tsconfig.json"
+    ]
+  },
+  "ignorePatterns": [
+    "[...nextauth].ts",
+    "middleware.ts",
+    "/"
+  ],
+  "rules": {
+    "@typescript-eslint/no-misused-promises": "off",
+    "@typescript-eslint/no-extraneous-class": "off"
+  }
 }
+
