--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -12,6 +12,7 @@
     "@mantine/core": "^7.1.7",
     "@mantine/hooks": "^7.1.7",
     "@mantine/notifications": "^7.1.7",
+    "eslint-config-standard-with-typescript": "^39.1.1",
     "next": "14.0.0",
     "next-auth": "^4.24.4",
     "react": "^18",
@@ -22,7 +23,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.0.0",
+    "eslint-config-next": "^14.0.0",
     "typescript": "^5"
   }
 }
