--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -12,6 +12,8 @@
     "@mantine/core": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
     "@mantine/notifications": "^7.8.0",
+    "@tabler/icons-react": "^3.2.0",
+    "cookies-next": "^4.1.1",
     "eslint-config-standard-with-typescript": "^39.1.1",
     "next": "14.2.2",
     "react": "^18",
