--- a/retrotrack.web/.env.development
+++ b/retrotrack.web/.env.development
@@ -1,4 +1,3 @@
 API_URL=https://localhost:7252
 NEXT_PUBLIC_WEB_URL=http://localhost:3000
-NEXTAUTH_URL=http://localhost:3000
-NEXTAUTH_SECRET=supersecretpassword
+API_SECRET=supersecret
