--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^7.8.0",
+    "@mantine/form": "^7.8.0",
     "@mantine/hooks": "^7.8.0",
     "@mantine/notifications": "^7.8.0",
     "@tabler/icons-react": "^3.2.0",
