--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint --fix"
   },
   "dependencies": {
     "@mantine/core": "^7.8.0",
