--- a/RetroTrack/RetroTrack/appsettings.Development.json
+++ b/RetroTrack/RetroTrack/appsettings.Development.json
@@ -1,8 +1,11 @@
 {
   "Logging": {
     "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
+      "Default": "Warning",
+      "Microsoft": "Information",
+      "Microsoft.Hosting.Lifetime": "Information",
+      "Microsoft.EntityFrameworkCore.Database.Command": "Warning"
     }
-  }
-}
+  },
+  "AllowedHosts": "*"
+} 
