--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -13,6 +13,7 @@
     "@mantine/hooks": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
     "@tabler/icons-react": "^3.34.0",
+    "@tanstack/react-query": "^5.80.7",
     "next": "15.3.3",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
