--- a/retrotrack.web/package.json
+++ b/retrotrack.web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@mantine/core": "^8.0.2",
+    "@mantine/form": "^8.1.1",
     "@mantine/hooks": "^8.0.2",
     "@mantine/notifications": "^8.0.2",
     "@tabler/icons-react": "^3.34.0",
