remove old site + move around files

--- a/RetroTrack.Api/RetroTrack.Api.csproj
+++ b/RetroTrack.Api/RetroTrack.Api.csproj
@@ -39,13 +39,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\RetroTrack.Domain\RetroTrack.Domain.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Reference Include="BreganUtils">
-      <HintPath>..\..\Util\BreganUtils.dll</HintPath>
-    </Reference>
+    <ProjectReference Include="..\RetroTrack.Domain\RetroTrack.Domain.csproj" />
   </ItemGroup>
 
 </Project>
