--- a/.github/workflows/RunCSharpChecks.yml
+++ b/.github/workflows/RunCSharpChecks.yml
@@ -3,7 +3,7 @@ name: Run C# formatting
 on:
   pull_request:
     branches:
-      - main
+      - master
     paths:
       - "RetroTrack.Domain/**"
       - "RetroTrack.Api/**"
@@ -11,7 +11,7 @@ on:
 
   push:
     branches:
-      - main
+      - master
     paths:
       - "RetroTrack.Domain/**"
       - "RetroTrack.Api/**"
