--- a/RetroTrack.Api/Dockerfile
+++ b/RetroTrack.Api/Dockerfile
@@ -1,30 +1,30 @@
-# See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
-
 # This stage is used when running from VS in fast mode (Default for Debug configuration)
 FROM mcr.microsoft.com/dotnet/aspnet:9.0 AS base
-USER $APP_UID
 WORKDIR /app
 EXPOSE 8080
 EXPOSE 8081
-
 
 # This stage is used to build the service project
 FROM mcr.microsoft.com/dotnet/sdk:9.0 AS build
 ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
-COPY ["RetroTrack.Api/RetroTrack.Api.csproj", "RetroTrack/RetroTrack.Api/"]
-COPY ["RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack/RetroTrack.Domain/"]
-RUN dotnet restore "./RetroTrack/RetroTrack.Api.csproj"
-COPY . .
-WORKDIR "/src/RetroTrack/RetroTrack.Api"
-RUN dotnet build "./RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
-# This stage is used to publish the service project to be copied to the final stage
+# Copy csproj files and restore as distinct layers
+COPY ["RetroTrack.Api/RetroTrack.Api.csproj", "RetroTrack.Api/"]
+COPY ["RetroTrack.Domain/RetroTrack.Domain.csproj", "RetroTrack.Domain/"]
+RUN dotnet restore "RetroTrack.Api/RetroTrack.Api.csproj"
+
+# Copy everything else
+COPY . .
+WORKDIR "/src/RetroTrack.Api"
+RUN dotnet build "RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/build
+
+# Publish stage
 FROM build AS publish
 ARG BUILD_CONFIGURATION=Release
-RUN dotnet publish "./RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "RetroTrack.Api.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
-# This stage is used in production or when running from VS in regular mode (Default when not using the Debug configuration)
+# Final stage
 FROM base AS final
 WORKDIR /app
 COPY --from=publish /app/publish .
