--- a/.editorconfig
+++ b/.editorconfig
@@ -12,7 +12,7 @@ indent_style = space
 tab_width = 4
 
 # New line preferences
-end_of_line = unset
+end_of_line = lf
 insert_final_newline = true
 
 #### .NET Code Actions ####
